--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body{
   margin:0;
   padding:0;
-  background-color: #fff;
+  background-color: #EFEFEF;
   font-family: 'Nunito Sans', sans-serif;
 
 }
