--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,12 @@ a:hover{
   }
   
 }
+.last-content-wrapper{
+  padding-bottom:50px;
+}
+.MuiBox-root.css-19kzrtu{
+  padding: 0px!important;
+}
 .slick-slide .slick-active{
   width:200px!important;
 }
